torrentio/ingressroute-knightcrawler.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: knightcrawler-old.${dns_domain}
  namespace: torrentio
spec:
  routes:
    - match: Host(`knightcrawler-old.${dns_domain}`)
      kind: Rule
      services:
        - name: torrentio-addon
          kind: Service
          port: 7001
      middlewares:  
        - name: chain-public-stremio-addon
          namespace: traefik
